name:                virtual-hom
version:             0.1.0.0
synopsis:            Haskell + GHCJS implementation of virtual-dom
description:         Please see README.md
homepage:            http://github.com/j-mueller/virtual-hom#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Müller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015 Jann Müller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

homepage: https://github.com/j-mueller/virtual-hom
bug-reports: https://github.com/j-mueller/virtual-hom/issues

flag js
  description: Use GHCJS dependencies (ghcjs-prim, ghcjs-base). If disabled (for haddock generation) then those will be replaced by `undefined` stubs.
  default: True

flag examples
  description: Build the examples
  default: False
  manual: False

library
  hs-source-dirs:      src
  exposed-modules:
    VirtualHom.Bootstrap,
    VirtualHom.Element,
    VirtualHom.Html,
    VirtualHom.Rendering,
    VirtualHom.View,
    VirtualHom.Internal.Element,
    VirtualHom.Internal.FFI,
    VirtualHom.Internal.Rendering
  build-depends:
      base >= 4.7 && < 5
    , containers
    , lens
    , mtl
    , text
  if flag(js)
    build-depends:
      ghcjs-base >= 0.2.0.0,
      ghcjs-prim
  default-language:    Haskell2010

executable simple-example
  hs-source-dirs:    examples/simple
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  if !flag(examples)
    buildable: False
  else
    build-depends:
        base >= 4.7 && < 5
      , virtual-hom
      , lens
      , mtl
      , text
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/j-mueller/virtual-hom
