name:                virtual-hom
version:             0.1.0.0
synopsis:            Haskell + GHCJS implementation of virtual-dom
description:         Please see README.md
homepage:            http://github.com/j-mueller/virtual-hom#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Müller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015-2016 Jann Müller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

homepage: https://github.com/j-mueller/virtual-hom
bug-reports: https://github.com/j-mueller/virtual-hom/issues

flag js
  description: Use GHCJS dependencies (ghcjs-prim, ghcjs-base). If disabled (for haddock generation) then those will be replaced by `undefined` stubs.
  default: True

flag examples
  description: Build the examples
  default: False
  manual: False

flag test-properties
  description: Build the test suite 
  default: True
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:
    VirtualHom.Bootstrap,
    VirtualHom.Element,
    VirtualHom.Html,
    VirtualHom.Rendering,
    VirtualHom.View,
    VirtualHom.Internal.Element,
    VirtualHom.Internal.FFI,
    VirtualHom.Internal.Rendering
  build-depends:
      base >= 4.7 && < 5
    , bifunctors >= 4.2.1 && < 6
    , containers  >= 0.5.5 && < 0.5.8
    , lens >= 4.6 && < 5
    , mtl >= 2.2.1 && < 2.3
    , stm >= 2.4 && < 2.5
    , text >= 1.2 && < 1.3
  if flag(js)
    build-depends:
      ghcjs-base >= 0.2.0.0,
      ghcjs-prim
  default-language:    Haskell2010

executable simple-example
  hs-source-dirs:    examples/simple
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  if !flag(examples)
    buildable: False
  else
    build-depends:
        base >= 4.7 && < 5
      , virtual-hom
      , lens >= 4.6 && < 5
      , mtl >= 2.2 && < 2.3
      , text >= 1.2 && < 1.3
  default-language: Haskell2010

executable validation-example
  hs-source-dirs:    examples/validation
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  if !flag(examples)
    buildable: False
  else
    build-depends:
        base >= 4.7 && < 5
      , virtual-hom
      , lens
      , mtl
      , text
  default-language: Haskell2010

executable prisms-example
  hs-source-dirs:    examples/prisms
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  if !flag(examples)
    buildable: False
  else
    build-depends:
        base >= 4.7 && < 5
      , virtual-hom
      , lens
      , mtl
      , text
  default-language: Haskell2010

-- Verify some properties of the diff algorithm
test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  other-modules:
    VirtualHom.Properties  
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    test
  if !flag(test-properties)
    buildable: False
  else
    build-depends:
      base,
      virtual-hom,
      lens,
      QuickCheck                 >= 2.4,
      quickcheck-instances       >= 0.3.11,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2,
      transformers

source-repository head
  type:     git
  location: https://github.com/j-mueller/virtual-hom
